<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBlack"
        tools:context=".feature.movies.PopularMoviesActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/card_views_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
                android:id="@+id/popular_movies_cv"
                android:layout_width="0dp"
                app:cardCornerRadius="0dp"
                android:layout_height="match_parent"
                app:layout_constraintWidth_percent="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:cardBackgroundColor="@color/colorOrange">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/popular_movies_label"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhite" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:id="@+id/upcoming_movies_cv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintWidth_percent="0.5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:cardBackgroundColor="@color/colorBlack">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/upcoming_movies_label"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhite" />
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
            android:id="@+id/header_text_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:textSize="24sp"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:text="@string/popular_movies_label"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_views_container"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/colorOrange"
          />

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_movies"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header_text_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            tools:listitem="@layout/movie_item">

    </androidx.recyclerview.widget.RecyclerView>

</androidx.constraintlayout.widget.ConstraintLayout>