...
                android:gravity="center"
                android:padding="10dp"
                android:textColor="@color/colorAccent"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/detail_image"
                tools:text="Joker" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/detail_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
...
