<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/navigation_popular"
            android:title="@string/nav_item_title_popular"/>
    <item
            android:id="@+id/navigation_upcoming"
            android:title="@string/nav_item_title_upcoming"/>
</menu>